# src/frontend/HomeCloud.Maps.Client.WebApi/swagger.json
@@ -186,7 +186,27 @@
         "tags": [
           "TourInfos"
         ],
-        "operationId": "GetAllTourInfos",
+        "operationId": "GetTourInfosPagination",
+        "parameters": [
+          {
+            "name": "pageSize",
+            "in": "query",
+            "schema": {
+              "type": "integer",
+              "format": "int32",
+              "default": 10
+            }
+          },
+          {
+            "name": "pageIndex",
+            "in": "query",
+            "schema": {
+              "type": "integer",
+              "format": "int32",
+              "default": 0
+            }
+          }
+        ],
         "responses": {
           "401": {
             "description": "Unauthorized",
